--- a/Unity/MicroSplatSnow/Packages/manifest.json
+++ b/Unity/MicroSplatSnow/Packages/manifest.json
@@ -4,6 +4,7 @@
     "ch.ocbnet.unityassetexporter": "https://github.com/OCB7D2D/UnityAssetExporter.git#upm@master",
     "com.unity.ide.visualstudio": "2.0.20",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.modules.assetbundle": "1.0.0"
+    "com.unity.modules.assetbundle": "1.0.0",
+    "com.unity.modules.imageconversion": "1.0.0"
   }
 }
